# mcp

./: .dockerignore  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.go.yaml  .pre-commit-config.yaml  .trivyignore  BACKUP-pyproject.toml  CHAT.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  IDEA.md  PROGRESS.md  QUESTIONS.md  README.md  RESEARCH.md  RESULTS.md  ROADMAP.md  RRRRREEEEEEAAAAADDDDDD.md  TODO-completed.md  TODO-continued.md  TODO.md  Taskfile-go.yml  Taskfile.yml  US-037-IMPLEMENTATION-SUMMARY.md  US-039-IMPLEMENTATION-SUMMARY.md  alembic.ini  devbox.json  docker-compose.yml  locustfile.py  pyproject.toml  renovate.json  sonar-project.properties  test.md
artifacts/: product_vision_v1.md  technical_considerations_from_epic.md
backup/: CHAT.md  RESULTS.md  TODO-HLS-001.md  TODO-HLS-002.md  TODO-HLS-003.md  TODO-HLS-004.md  TODO-HLS-005.md  TODO-completed.md  context_engineering_strategy_v1.md  create-generic-research-prompt.md  kickoff.md  research-artifact-template-gemini.md  research_generator.xml  research_generator_gemini.xml  specialized-claude-template.md
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  GRADUATION.md  Rag_2_0_detailed_analysis.md  SETUP.md  TEST_EVALUATION_REPORT.md  advanced_prompt_engineering_merge_report.md  advanced_prompt_engineering_software_docs_code_final.md  advanced_prompt_engineering_software_docs_code_gemini.md  advanced_prompt_engineering_software_docs_code_gpt5.md  artifacts_refinement_plan.md  ci-cd-staging-strategy.md  context_engineering_strategy_v1.md  deployment-staging.md  framework_validation_gaps.md  generator_validation_spec.md  go_specialized_claude_evaluation.md  mcp_tools_sequence_diagram.md  mcp_tools_sequence_diagram_v3.md  metadata_quick_reference.md  metadata_refinement_plan.md  performance-runbook.md  product-idea.md  rag_strategy_prompt.md  research_coverage_evaluation.md  research_restructuring_guidelines.md  sdlc_artifacts_comprehensive_guideline.md  sdlc_artifacts_update_plan.md  sequential_thinking.md  specialized_claude_evaluation.md  staging-validation-results.md  troubleshooting-mcp-prompts.md
feedback/: EPIC-001...005_v1_critique.md  EPIC-001...005_v2_critique.md  EPIC-006_v1_comments.md  HLS-001_v1_comments.md  HLS-002-005_v1_comments.md  HLS-006-011_v1_comments.md  INIT-001_AI_Agent_MCP_Infrastructure_v1_critique.md  INIT-001_AI_Agent_MCP_Infrastructure_v2_critique.md  PRD-000_v1_comments.md  PRD-000_v2_comments.md  PRD-000_v3_comments.md  PRD-006_v1_comments.md  SPEC-001_v1_comments.md  US-028-033_v1_comments.md  US-028-039-implementation_critique_v1.md  US-028-039-implementation_critique_v2.md  US-028-039-implementation_critique_v3.md  US-036_v1_comments.md  US-040-047_completion_summary.md  US-040-047_final_completion_summary.md  US-040-047_final_status.md  US-040-047_v1_comments.md  US-040-047_v2_changes_applied.md  US-040-047_v2_comments.md  US-040-047_v3_final_status.md  US-040-047_v3_generation_summary.md  US-048-055_v1_comments.md  US-056-062_v1_comments.md  US-063-070_v1_comments.md  context_engineering_strategy_v1_critique.md  context_engineering_strategy_v1_critique_v1.md  context_engineering_strategy_v1_critique_v2.md  context_engineering_strategy_v1_critique_v3.md  context_engineering_strategy_v1_critique_v4.md  generators-templataes_comments_v1.md  lean_feedback_v1.md  lean_feedback_v2.md  new_work_feedback.md  (+2 more)
(+475 files in other folders)
